# logseq-shell

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release-shelld.yml
Formula/: logseq-shelld.rb
apps/logseq-shell/: README.md  index.html  logseq-plugin.edn  package.json  tsconfig.json  vite.config.ts
apps/logseq-shell/src/: main.ts
apps/logseq-shell/src/panel/: dock-layout.ts
apps/logseq-shell/src/terminal/: terminal-controller.ts  theme-adapter.test.ts  theme-adapter.ts  ws-client.ts
apps/skills/logseq-local-http/: SKILL.md
apps/skills/logseq-local-http/agents/: openai.yaml
apps/skills/logseq-local-http/references/: logseq-http-recipes.md
apps/skills/logseq-local-http/scripts/: logseq_http.py
crates/logseq-shelld/: Cargo.toml
crates/logseq-shelld/src/: main.rs
docs/: PROTOCOL_V1.md  REPO_BLUEPRINT.md  THEME_MAPPING.md
scripts/: dev.sh  install-logseq-shell-plugin.sh  install-logseq-shelld.sh
