[package]
name = "logseq-shelld"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"

[dev-dependencies]
serde_json = "1"
